--- a/public/plugins/select2-bootstrap4-theme/select2-bootstrap4.css
+++ b/public/plugins/select2-bootstrap4-theme/select2-bootstrap4.css
@@ -120,7 +120,7 @@ form.was-validated select:valid ~ .select2-container--bootstrap4 .select2-select
 
 .select2-container--bootstrap4 .select2-results__option--highlighted,
 .select2-container--bootstrap4 .select2-results__option--highlighted.select2-results__option[aria-selected=true] {
-  background-color: #007bff;
+  background-color: #196844;
   color: #f8f9fa; }
 
 .select2-container--bootstrap4 .select2-results__option[role=group] {
